Added markers, info bubble

--- a/src/main/resources/data/mainpanel.inc.html
+++ b/src/main/resources/data/mainpanel.inc.html
@@ -5,6 +5,11 @@
 <!-- smoothness is not too bad -->
 <!-- hot-sneaks is not too bad -->
 
+<div id="popup" class="ol-popup">
+  <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+  <div id="popup-content"></div>
+</div>
+
 <div id="dt_import_dialog">
   <h3>Load Data</h3>
   <!--    <div id="dt_import_help"/> -->
