--- a/site/docroot/navicell/about.html
+++ b/site/docroot/navicell/about.html
@@ -33,17 +33,22 @@
           <li class="nav-item">
             <a class="nav-link" href="maps.html">Maps</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="guide.html">Guide</a>
+          <li class="nav-item logged_in" style="display:none">
+            <a class="nav-link" href="factory.html">Factory</a>
+          </li>
+          <li class="nav-item logged_in" style="display:none">
+            <a class="nav-link" href="data.html">Data</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Help</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="guide.html">Guide</a>
+              <a class="dropdown-item" href="resources.html">Resources</a>
+              <a class="dropdown-item" href="faq.html">FAQ</a>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="resources.html">Resources</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="faq.html">FAQ</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           
         </ul>
